--- a/src/projeto/vendas/view/GuiEmitir_nota_fiscal.form
+++ b/src/projeto/vendas/view/GuiEmitir_nota_fiscal.form
@@ -272,8 +272,8 @@
             <Container class="javax.swing.JPanel" name="jPanelDados_Emitente">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="Emitente">
-                    <Property name="tabTitle" type="java.lang.String" value="Emitente"/>
+                  <JTabbedPaneConstraints tabName="Remetente">
+                    <Property name="tabTitle" type="java.lang.String" value="Remetente"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -340,7 +340,9 @@
                 <Component class="javax.swing.JComboBox" name="cbxEmpresa_Emitente">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="0"/>
+                      <StringArray count="1">
+                        <StringItem index="0" value="Pet Happy"/>
+                      </StringArray>
                     </Property>
                   </Properties>
                   <AuxValues>
@@ -357,6 +359,7 @@
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
                       <Format format="##.###.###/####-##" subtype="-1" type="5"/>
                     </Property>
+                    <Property name="text" type="java.lang.String" value="50.000.000/0000-01"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="lblRazao_Social_Emitente">
@@ -365,6 +368,9 @@
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtRazao_Social_Emitente">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Servir bem os Animais."/>
+                  </Properties>
                 </Component>
                 <Container class="javax.swing.JPanel" name="jPanelEndereco_Emitente">
                   <Properties>
@@ -461,6 +467,9 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtRua_Emitente">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Santiago Idalgo Ruiz"/>
+                      </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblNumero_Emitente">
                       <Properties>
@@ -468,6 +477,12 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtNumero_Emitente">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="69"/>
+                      </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtNumero_EmitenteActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblComplemento_Emitente">
                       <Properties>
@@ -475,6 +490,9 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtComplemento_Emitente">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="N&#xe3;o Existe"/>
+                      </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblBairro_Emitente">
                       <Properties>
@@ -482,6 +500,9 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtBairro_Emitente">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Jardim Maria Antonia Prado"/>
+                      </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblCEP_Emitente">
                       <Properties>
@@ -493,6 +514,7 @@
                         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
                           <Format format="##.###-###" subtype="-1" type="5"/>
                         </Property>
+                        <Property name="text" type="java.lang.String" value="18.076-120"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblCidade_Emitente">
@@ -501,6 +523,9 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtCidade_Emitente">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Sorocaba"/>
+                      </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblUF_Emitente">
                       <Properties>
@@ -508,6 +533,9 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JTextField" name="txtUF_Emitente">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="SP"/>
+                      </Properties>
                     </Component>
                   </SubComponents>
                 </Container>
@@ -516,8 +544,8 @@
             <Container class="javax.swing.JPanel" name="jPanelRemetente">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="Destinat&#xe1;rio/Remetente">
-                    <Property name="tabTitle" type="java.lang.String" value="Destinat&#xe1;rio/Remetente"/>
+                  <JTabbedPaneConstraints tabName="Destinat&#xe1;rio">
+                    <Property name="tabTitle" type="java.lang.String" value="Destinat&#xe1;rio"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -557,7 +585,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="lblNome_Fantasia_Remetente" min="-2" max="-2" attributes="0"/>
-                                          <Component id="txtNome_Fantasia_Remetente" min="-2" pref="204" max="-2" attributes="0"/>
+                                          <Component id="txt_NomeDestinario" min="-2" pref="204" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -588,7 +616,7 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="ftxtTelefone_Remetente" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="txtEmail_Remetente" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txtNome_Fantasia_Remetente" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txt_NomeDestinario" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="jPanelEndereco_Remetente" min="-2" max="-2" attributes="0"/>
@@ -603,7 +631,7 @@
                         <Property name="text" type="java.lang.String" value="Nome Fantasia"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txtNome_Fantasia_Remetente">
+                    <Component class="javax.swing.JTextField" name="txt_NomeDestinario">
                     </Component>
                     <Component class="javax.swing.JLabel" name="lblTelefone_Remetente">
                       <Properties>
